# sotrans_analytics_department

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
docs/: architecture.md  usage.md
projects/ad_hoc/move_overstock_to_spb_wh/: new_move_to_spb.ipynb
projects/ad_hoc/rename_files/: rename_batch_movement_files.py
projects/metrics/coefficients/tradestock/: tradestock.ipynb
projects/metrics/coefficients/tradestock/dev/: price_revaluation.ipynb
projects/metrics/values/havings/: havings.ipynb
projects/metrics/values/stock_ordered/: stock_ordered.ipynb
projects/tools/article_crossing/: article_crossing_tool.py  pyproject.toml
projects/tools/article_crossing/modules/: __init__.py  article_crossing_app.py  functions.py  log_handler.py
projects/tools/article_crossing/scripts/: article_crossing.py
projects/tools/avito/: master_file.py  photo_img_saver.py  photo_urls_saver.py
projects/tools/calc_orders/: calc_orders.ipynb
projects/update/cross_numbers/: upd_cross_numbers.py
projects/update/nomenclature/: upd_nomenclature.ipynb  upd_nomenclature.py
projects/update/onec_to_postgres/: etl_batch_movement.ipynb
source/common/: logger.py
source/config/: __init__.py  docker_run_clickhouse.yaml  settings.py
source/core/da/: __init__.py
source/core/de/: __init__.py
source/core/de/connectors/: __init__.py  postgresql.py
source/core/de/pipeline/update/: __init__.py
source/core/de/pipelines/batch_movement/: etl_bm.py
source/core/de/pipelines/cross_numbers/: cross_numbers.py
source/core/de/pipelines/nomenclature/: nomenclature.py  upd_nomenclature.ipynb
source/core/de/serving/: __init__.py
source/core/de/serving/datamart/: __init__.py  datamart.py
source/data/ingestion/: base_ingestor.py  csv_ingestor.py  json_ingestor.py  xml_ingestor.py
source/database/: __init__.py
source/database/schemas/index/: clustering_partitions_data_by_date.sql  create_index.sql
source/database/schemas/partiotions/: create_partitions.py  create_partitions.sql
source/database/schemas/views/: vw_en_final.sql  vw_ex_complect.sql  vw_ex_decomplect.sql  vw_ex_inventory.sql  vw_ex_movement.sql  vw_ex_resort.sql  vw_ex_sale.sql  vw_ex_update.sql  vw_ex_write_off.sql  vw_in_complect.sql  vw_in_decomplect.sql  vw_in_entering.sql  vw_in_inventory.sql  vw_in_movement.sql  vw_in_receipt.sql  vw_in_resort.sql  vw_in_update.sql  vw_st_init.sql  vw_tr_transfer.sql
source/exception/excel/: error_xl_shared_strings_xml.py
source/utils/decorators/handlers/: __init__.py  excel.py
source/utils/decorators/handlers/excel/: __init__.py  handler_xl_shared_string_xml.py
source/utils/dtypes/: __init__.py  set_dtypes.py
source/utils/excel/: vba.py
source/utils/validation/database/: __init__.py  check_exists_data_in_table.py
(+32 files in other folders)
