[project]
name = "article-crossing"
version = "1.0.0"
description = "Инструмент кроссировки артикулов"
authors = [
    {name = "Dmitry 'ts.kdv.raz0r' Kolganov",email = "ts.kdv.raz0r@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
